[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "endstone-essentials"
version = "0.0.4"
dependencies = ["pyyaml"]
authors = [
    { name = "daoge_cmd", email = "3523206925@qq.com" },
    { name = "Vincent Wu", email = "magicdroidx@gmail.com" },
]
description = "The modern essentials suite for endstone server"
readme = "README.md"
license = { file = "LICENSE" }
keywords = ["endstone", "plugin", "essentials"]

[project.urls]
Homepage = "https://github.com/endstone-essentials/essentials"

[project.entry-points."endstone"]
essentials = "endstone_essentials:EssentialsPlugin"